# replacements

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  WHATS_NEXT.md  crossplatform-progress.md  crossplatformChecklist.md  dev.sh  index.html  migrate-to-categories.js  package-lock.json  package.json  universal_build.sh  vite.config.ts
.claude/: mcp.json  settings.local.json
.claude/agents/: backend-expert.md  code-reviewer.md  frontend-expert.md  planner.md  researcher.md
.github/workflows/: README.md  release.yml
.stfolder/: syncthing-folder-8d2d69.txt
backups/migration_2025-05-29T03-53-27-009Z/: migration_report.json  migration_report.md
backups/migration_2025-05-29T03-54-01-585Z/: migration_report.json  migration_report.md
memory-bank/: ANALYSIS_SUMMARY.txt  CATEGORY_LINKING_INVESTIGATION.md  NOTES.md  activeContext.md  category_hierarchy_diagram.md  category_relationship_analysis.md  cross-platform-paths.md  implementation_checklist.md  logging.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  variable-insertion.md
memory-bank/research/: claude-code-agents.md  tauri-v2-path-apis-and-ipc-patterns.md
scripts/: sync-and-test.sh
src/: App.tsx  DESIGN_SYSTEM.md  design-tokens.css  design-tokens.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  llm_api.rs  main.rs  paths.rs  secure_storage.rs  yaml_utils.rs
src/contexts/: CategoriesContext.tsx  ExtensionContext.tsx  LLMContext.tsx  PathContext.tsx  ProjectCategoriesContext.tsx  (+5 more)
(+59 files in other folders)
