[package]
name = "better-replacements-manager"
version = "0.1.0"
description = "A text replacement and AI prompt template manager that integrates with Espanso"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rfd = "0.14"
chrono = "0.4"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
tauri-plugin-log = { version = "2.0.0" }
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
keyring = "2.3"
uuid = { version = "1", features = ["v4"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
